--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/gmpalaganas/memecatdiscordbot#readme",
   "dependencies": {
       "discord.js": "8.0.0",
-      "xkcd-imgs": "1.0.1"
+      "xkcd-imgs": "1.0.1",
+      "cheerio": "0.20.0",
+      "request": "2.72.0"
   }
 }
